fix: increase z-index of modals
close #470

--- a/src/options/style.css
+++ b/src/options/style.css
@@ -97,6 +97,10 @@ input[type=checkbox] {
   margin-right: .5em;
 }
 
+.vl-modal {
+  z-index: 3000;
+}
+
 .in-out {
   &-appear,
   &-enter,
